[gd_scene load_steps=3 format=3 uid="uid://bmv26r6f7hh2m"]

[ext_resource type="Script" path="res://scenes/ui/alert/alert_ui.gd" id="1_as0t6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1pel8"]
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="AlertUI" type="PanelContainer" node_paths=PackedStringArray("timer", "message", "panel_color")]
offset_right = 56.0
offset_bottom = 41.0
size_flags_horizontal = 0
script = ExtResource("1_as0t6")
timer = NodePath("Timer")
message = NodePath("ContentHBox/ContentMargin/AlertHBox/MessageLabel")
timeout = 5.0
panel_color = NodePath("ContentHBox/ColorPanel")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ContentHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="ContentHBox"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="AlertHBox" type="HBoxContainer" parent="ContentHBox/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MessageLabel" type="Label" parent="ContentHBox/ContentMargin/AlertHBox"]
layout_mode = 2
text = "Mensagem de alerta"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="ContentHBox/ContentMargin/AlertHBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "X"

[node name="ColorPanel" type="Panel" parent="ContentHBox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1pel8")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ContentHBox/ContentMargin/AlertHBox/CloseButton" to="." method="_on_close_button_pressed"]
